# ros2_cuda_ipc

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
examples/multi_process_image_fanout/: CMakeLists.txt  README.md  package.xml
examples/multi_process_image_fanout/doc/: design.md  encoder_like_node.md  gpu_image_publisher.md  inference_like_node.md  preview_node.md  progress.md
examples/multi_process_image_fanout/include/multi_process_image_fanout/: cuda_checks.hpp  image_publisher_helper.hpp  kernels.hpp  status_format.hpp
examples/multi_process_image_fanout/launch/: multi_process_image_fanout.launch.xml
examples/multi_process_image_fanout/src/: encoder_like_node.cpp  gpu_image_publisher.cpp  image_publisher_helper.cpp  inference_like_node.cpp  preview_node.cpp
examples/multi_process_image_fanout/src/cuda/: kernels.cu
examples/multi_process_image_fanout/test/: test_kernels.cpp
gpu_image_transport/: CMakeLists.txt  package.xml
gpu_image_transport/include/gpu_image_transport/: gpu_image_transport_base.hpp
gpu_image_transport/src/: gpu_image_transport.cpp  gpu_image_transport_base.cpp  gpu_image_transport_compressed.cpp
julia_set/: CMakeLists.txt  README.md  package.xml
julia_set/include/julia_set/: julia_kernel.hpp  julia_publisher_helper.hpp  memory_backend_utils.hpp
julia_set/include/julia_set/cuda/: cuda_util.hpp  gpu_lease_pool.hpp  julia_kernel.hpp  nvtx_scoped_range.hpp
julia_set/launch/: julia_set_demo.launch.py
julia_set/src/: colorize_node.cpp  gpu_image_transport.cpp  julia_kernel.cu  julia_publisher_helper.cpp  julia_publisher_helper.cu  julia_set_publisher.cpp  julia_set_subscriber.cpp
julia_set/src/cuda/: cuda_util.cpp  gpu_lease_pool.cpp  julia_set.cu
julia_set/test/: test_gpu_lease_pool.cpp
legacy/ros2_cuda_ipc_core/: package.xml
legacy/ros2_cuda_ipc_core/src/: cuda_support.cu  gpu_buffer_mapper.cpp
legacy/ros2_cuda_ipc_core/test/: test_gpu_buffer_mapper.cpp  test_gpu_buffer_pool.cpp  test_scoped_mapped_frame.cpp
ros2_cuda_ipc_core/: CMakeLists.txt  package.xml
ros2_cuda_ipc_core/include/ros2_cuda_ipc_core/: buffer_view.hpp  buffer_view_mapper.hpp  cuda_support.hpp  gpu_buffer_mapper.hpp  gpu_buffer_pool.hpp  image_view.hpp  image_view_mapper.hpp  ipc_handle_cache.hpp  lease_handle.hpp  lease_manager.hpp  memory_backend_utils.hpp  memory_types.hpp  nvtx_scoped_range.hpp  pointcloud2_view.hpp  pointcloud2_view_mapper.hpp  posix_error.hpp  scoped_mapped_frame.hpp  shm_release.hpp  type_adapters.hpp  version.hpp  zero_copy_publisher.hpp  zero_copy_subscriber.hpp
ros2_cuda_ipc_core/include/ros2_cuda_ipc_core/backend/: backend_importer.hpp  (+2 more)
ros2_cuda_ipc_core/src/: buffer_view.cpp  buffer_view_mapper.cpp  cuda_support.cpp  cuda_support.cu  cuda_support_stub.cpp  cuda_util.cpp  gpu_buffer_mapper.cpp  gpu_buffer_pool.cpp  gpu_lease_pool.cpp  image_view.cpp  image_view_mapper.cpp  ipc_handle_cache.cpp  lease_handle.cpp  lease_manager.cpp  pointcloud2_view.cpp  pointcloud2_view_mapper.cpp  scoped_mapped_frame.cpp  shm_release.cpp  zero_copy_publisher.cpp  zero_copy_subscriber.cpp
ros2_cuda_ipc_core/src/backend/: backend_importer.cpp  cuda_ipc_importer.cpp  vmm_fd_importer.cpp
ros2_cuda_ipc_core/src/cuda/: buffer_view.cpp  cuda_ipc_memory_backend.cpp  cuda_util.cpp  gpu_lease_pool.cpp  memory_backend_cuda_ipc.cpp  memory_backend_vmm_fd.cpp  memory_importer.cpp  vmm_fd_memory_backend.cpp
ros2_cuda_ipc_core/src/detail/: backend_importer.cpp  cuda_ipc_importer.cpp  vmm_fd_importer.cpp
ros2_cuda_ipc_core/src/mapper/: buffer_view_mapper.cpp  image_view_mapper.cpp  pointcloud2_view_mapper.cpp
ros2_cuda_ipc_core/src/view/: buffer_view.cpp  image_view.cpp  pointcloud2_view.cpp
ros2_cuda_ipc_core/test/: test_buffer_view_mapper.cpp  test_cuda_support.cpp  test_gpu_buffer_mapper.cpp  test_gpu_buffer_pool.cpp  test_gpu_lease_pool.cpp  test_image_view_mapper.cpp  test_ipc_handle_cache.cpp  test_lease_handle.cpp  test_lease_manager.cpp  test_mapper_utils.hpp  test_pointcloud2_view_mapper.cpp  test_type_adapters.cpp
ros2_cuda_ipc_core/test/mapper/: test_buffer_view_mapper.cpp  test_image_view_mapper.cpp  test_pointcloud2_view_mapper.cpp
ros2_cuda_ipc_msgs/: CMakeLists.txt  package.xml
ros2_cuda_ipc_msgs/msg/: BufferCore.msg  GpuBuffer.msg  GpuImage.msg  GpuPlane.msg  GpuPointCloud2.msg
ros2_cuda_ipc_msgs/srv/: GpuBufferRelease.srv
ros2_cuda_ipc_py/: CMakeLists.txt  package.xml  setup.py
ros2_cuda_ipc_py/ros2_cuda_ipc_py/: __init__.py  publisher.py  subscriber.py
ros2_cuda_ipc_py/src/: bindings.cpp  dlpack_utils.cpp  pybind_module.cpp
ros2_cuda_ipc_test/: CMakeLists.txt  README.md  package.xml  test_ipc.sh
ros2_cuda_ipc_test/launch/: cuda_ipc.launch.py  vmm.launch.py
ros2_cuda_ipc_test/src/: cuda_ipc_consumer.cu  cuda_ipc_producer.cu  vmm_fd_consumer.cu  vmm_fd_producer.cu
sample_nodes/: CMakeLists.txt  package.xml
sample_nodes/include/sample_nodes/: gpu_buffer_publisher_helper.hpp  gpu_image_publisher_helper.hpp  gpu_pointcloud_publisher_helper.hpp  sample_cuda_utils.hpp  tracing.hpp
sample_nodes/launch/: gpu_image_demo.launch.py  gpu_pointcloud_demo.launch.py
sample_nodes/src/: gpu_buffer_publisher.cpp  gpu_buffer_publisher_helper.cpp  gpu_buffer_subscriber.cpp  gpu_image_publisher.cpp  gpu_image_publisher_helper.cpp  gpu_image_subscriber.cpp  gpu_pointcloud_publisher.cpp  gpu_pointcloud_publisher_helper.cpp  gpu_pointcloud_subscriber.cpp  sample_cuda_utils.cu  sample_cuda_utils_stub.cpp  tracing.cpp
sample_nodes/test/: test_gpu_buffer_publisher_helper.cpp
sample_nodes_py/: CMakeLists.txt  package.xml  setup.py
sample_nodes_py/sample_nodes_py/: gpu_buffer_publisher.py  gpu_buffer_subscriber.py
sample_nodes_py/test/: test_sample_nodes_py.py
simple_increment/: CMakeLists.txt  package.xml
simple_increment/include/simple_increment/: cuda_functions.hpp
simple_increment/launch/: simple_increment_demo.launch.py
simple_increment/src/: simple_increment_node.cpp
simple_increment/src/cuda/: cuda_functions.cu
type_adaptation/accelerated_pipeline/simple_increment/: CMakeLists.txt
(+54 files in other folders)
