<?xml version="1.0"?>
<package format="3">
  <name>gpu_image_transport</name>
  <version>0.0.0</version>
  <description>GPU to CPU image transport node for ros2_cuda_ipc samples.</description>
  <maintainer email="dskkato@example.com">dskkato</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>ros2_cuda_ipc_core</depend>
  <depend>ros2_cuda_ipc_msgs</depend>
  <depend>libopencv-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
