<?xml version="1.0"?>
<package format="3">
  <name>ros2_cuda_ipc_core</name>
  <version>0.0.1</version>
  <description>C++ core utilities for ROS2 CUDA IPC transport.</description>
  <maintainer email="kato.daisuke429@gmail.com">dskkato</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake_gtest</build_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <build_depend>ros2_cuda_ipc_msgs</build_depend>
  <exec_depend>ros2_cuda_ipc_msgs</exec_depend>
  <build_depend>cuda_runtime</build_depend>
  <exec_depend>cuda_runtime</exec_depend>
</package>
