<?xml version="1.0"?>
<package format="3">
  <name>ros2_cuda_ipc_msgs</name>
  <version>0.0.1</version>
  <description>Messages and services for ROS2 CUDA IPC zero-copy transport.</description>
  <maintainer email="example@example.com">Maintainer</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
