<?xml version="1.0"?>
<package format="3">
  <name>sample_nodes</name>
  <version>0.0.1</version>
  <description>Sample publisher and subscriber nodes for ROS2 CUDA IPC transport.</description>
  <maintainer email="kato.daisuke429@gmail.com">dskkato</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>ros2_cuda_ipc_msgs</build_depend>
  <build_depend>ros2_cuda_ipc_core</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>ros2_cuda_ipc_msgs</exec_depend>
  <exec_depend>ros2_cuda_ipc_core</exec_depend>
</package>
