<?xml version="1.0"?>
<package format="3">
  <name>sample_nodes_py</name>
  <version>0.0.1</version>
  <description>Python sample nodes for ros2_cuda_ipc.</description>
  <maintainer email="kato.daisuke429@gmail.com">dskkato</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>rclpy</build_depend>
  <build_depend>ros2_cuda_ipc_msgs</build_depend>
  <build_depend>ros2_cuda_ipc_py</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2_cuda_ipc_msgs</exec_depend>
  <exec_depend>ros2_cuda_ipc_py</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>pytest</test_depend>
</package>
