<?xml version="1.0"?>
<package format="3">
  <name>simple_increment</name>
  <version>0.1.0</version>
  <description>CUDA accelerated image increment node using ros2_cuda_ipc zero-copy transport.</description>
  <maintainer email="dskkato@example.com">dskkato</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>ros2_cuda_ipc_core</depend>
  <depend>ros2_cuda_ipc_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

