<?xml version="1.0"?>
<package format="3">
  <name>multi_process_image_fanout</name>
  <version>0.1.0</version>
  <description>Primary ros2_cuda_ipc demo for one GPU image publisher fanning out to multiple processes.</description>
  <maintainer email="dskkato@example.com">dskkato</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>ros2_cuda_ipc_core</depend>
  <depend>ros2_cuda_ipc_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
